// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled comments 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
}

.c1 {
  color: #333333;
  font-family: "TimesModern-Bold";
  font-size: 27px;
  margin: 0;
  padding-bottom: 5px;
  padding-top: 30px;
  text-align: center;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Comments for this article have been turned off
  </p>
</div>
`;

exports[`enabled comments 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
  className="c0"
  id="comments-container"
>
  <div />
</div>
`;
